fixed spacing

--- a/css/platemath.css
+++ b/css/platemath.css
@@ -1,6 +1,6 @@
 body {
     background: #f0ead6;
-    margin-top: 100px;
+    margin-top: 6rem;
     font-family: 'Rubik', sans-serif;
     color: #2E3640;
     text-align: center;
